# cube-beast-editor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  example-profiling.json  imgui.ini  wasm.recipe.py
.github/workflows/: cpp.yml  unit-test.yml  wasm.yml
doc/: README.md
lib/glad/include/glad/: gles2.h
lib/glad/src/: gles2.c
lib/imgui/: imconfig.h  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
lib/met/core/: component-collection.hpp  registry.hpp
lib/profiling/: instrumentor.h
models/: 3x3x3.cbe  3x3x3.json
res/shaders/: basic.vert  picking.frag  picking.vert
res/shaders/basics/: basic.frag  basic.vert
src/: app.cpp  app.h  context.h
src/components/graphics/: material.h  mesh.h  pipeline.h
src/components/physics/: object.h  position.h  transform.h
src/core/: context.h  singleton-components.h
src/data/: singleton-components.h  voxels.cpp  voxels.h
src/data/graphics/: camera.h  constant-buffers.h  lights.h  materials.h  meshes.cpp  pipelines.cpp  pipelines.h  render-targets.cpp  render-targets.h  textures.h
src/data/io/: brush.h  hovered.h  viewport.h
src/factories/entities/: cube-factory.cpp  cube-factory.h  primitive-factory.cpp  primitive-factory.h
src/graphics/: constant-buffer.h  cube-data.h  debug-draw.h  debug_draw.cpp  gl-exception.cpp  gl-exception.h  pipeline-input-description.h  pipeline-output-description.h  primitive-data.h  render-command.cpp  render-command.h  render-targets-description.h  uber-shader.vert  vertex-input-description.h
src/graphics/shaders/: ddraw.frag  ddraw.vert  geometry.frag  geometry.vert  grid.frag  grid.vert  gui.frag  gui.vert  lighting.frag  lighting.vert  shadow-map.frag  shadow-map.vert
src/gui/: brush-gui.cpp  brush-gui.h  context-info-bar-gui.cpp  context-info-bar-gui.h  font-awesome.h  font-ruda.h  generation-gui.cpp  generation-gui.h  i-gui.h  icons-awesome.h  icons.h  main-menu-bar-gui.cpp  main-menu-bar-gui.h  palette-gui.cpp  palette-gui.h  scene-outline-gui.cpp  scene-outline-gui.h  tools-gui.cpp  tools-gui.h  top-bar-gui.cpp  top-bar-gui.h  viewport-gui.cpp  viewport-gui.h  viewport-option-bar-gui.cpp  viewport-option-bar-gui.h
src/history/: history-handler.cpp  history-handler.h  i-history.h
src/history/brushes/: box-brush-history.cpp  voxel-brush-history.cpp  voxel-brush-history.h
src/history/generation/: rbf-history.cpp  rbf-history.h
src/layers/: i-layer.h  viewport-layer.cpp  viewport-layer.h
src/loaders/: cbe-loader.cpp  cbe-loader.h
src/maths/: 3dPoint.cpp  3dPoint.hpp  casting.cpp  casting.h  intersection.cpp  intersection.h  rbf.cpp  rbf.h  rbf.hpp  sparse-set.h
src/scomponents/: singleton-components.h
src/scomponents/graphics/: camera.h  constant-buffers.cpp  constant-buffers.h  lights.cpp  lights.h  materials.cpp  materials.h  mesh.h  meshes.cpp  meshes.h  pipelines.cpp  pipelines.h  render-targets.cpp  render-targets.h  texture.h  textures.cpp  textures.h  ui-style.h
src/scomponents/io/: brush.h  history.h  hovered.h  inputs.h  selection.h  viewport.h
src/scomponents/physics/: objects.h
src/systems/: brush-system.cpp  brush-system.h  camera-system.cpp  camera-system.h  i-system.h  render-system.cpp  render-system.h  selection-system.cpp  selection-system.h
src/systems/brushes/: voxel-brush-system.cpp  voxel-brush-system.h
test/maths/: casting.test.cpp  intersection.test.cpp  map-generation.test.cpp  rbf.test.cpp
www/: cube-beast-editor.js  cube-beast-editor.wasm  index.html  voxel-editor.data  voxel-editor.js  voxel-editor.wasm  voxel-editor.wasm.map
